--- a/src/FlaUI.UIA3/FlaUI.UIA3.csproj
+++ b/src/FlaUI.UIA3/FlaUI.UIA3.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Build">
-    <TargetFrameworks>net35;net40;net45;netstandard2.0;netcoreapp3.1;net5.0-windows</TargetFrameworks>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0-windows</TargetFrameworks>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
