--- a/src/FlaUI.UIA2/FlaUI.UIA2.csproj
+++ b/src/FlaUI.UIA2/FlaUI.UIA2.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup Label="Build">
-    <TargetFrameworks>net48;netcoreapp3.1;net5.0-windows</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF> <!-- Needed so System.Windows.Automation is added -->
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
