--- a/src/FlaUI.UIA3/FlaUI.UIA3.csproj
+++ b/src/FlaUI.UIA3/FlaUI.UIA3.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Build">
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0-windows</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
